--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,21 @@
-cvxopt==1.2.6
-cvxpy==1.1.12
-datashader==0.12.1
-distributed==2021.5.0
-hvplot==0.7.1
-jupyter==1.0.0
-jupyterlab==3.0.15
-numexpr==2.7.3
-opencv-python==4.5.2.52
-pip-chill==1.0.1
-plotly==4.14.3
-scikit-image==0.18.1
-seaborn==0.11.1
-streamlit==0.69.2
-tensorflow==2.5.0
-tensorflow-addons==0.13.0
-umap-learn==0.5.1
-vit-keras==0.1.0
+boto3
+datashader
+distributed
+enum-compat
+hvplot
+jupyter
+jupyterlab
+numexpr
+olefile
+pip-chill
+plotly
+scikit-image
+scikit-optimize
+seaborn
+streamlit
+tensorboardx
+tensorflow
+tensorflow-addons
+tune-sklearn
+umap-learn
+vit-keras
