--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,27 @@
-boto3
-datashader
-distributed
-enum-compat
-hvplot
-jupyter
-jupyterlab
-numexpr
-olefile
-pip-chill
-plotly
-scikit-image
-scikit-optimize
-seaborn
-streamlit
-tensorboardx
-tensorflow
-tensorflow-addons
-tune-sklearn
-umap-learn
-vit-keras
+boto3>=1.17.73
+cvxopt>=1.2.6
+cvxpy>=1.1.12
+datashader>=0.12.1
+distributed>=2021.5.0
+enum-compat>=0.0.3
+hvplot>=0.7.1
+jupyter>=1.0.0
+keras-nightly>=2.5.0.dev2021032900
+numexpr>=2.7.3
+olefile>=0.46
+opencv-python>=4.5.4.58
+openpyxl>=3.0.9
+pip-chill>=1.0.1
+plotly>=4.14.3
+scikit-image>=0.18.1
+scikit-optimize>=0.9.0
+seaborn>=0.11.1
+sklearn>=0.0
+streamlit>=1.0.0
+tensorboardx>=2.4
+tensorflow>=2.6.0
+tensorflow-addons>=0.13.0
+tune-sklearn>=0.4.1
+umap-learn>=0.5.1
+vit-keras>=0.1.0
+xlrd>=2.0.1
