--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.data-00000-of-00001 filter=lfs diff=lfs merge=lfs -text
 vgg19_model/ filter=lfs diff=lfs merge=lfs -text
+*.docx filter=lfs diff=lfs merge=lfs -text
