--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 *.data-00000-of-00001 filter=lfs diff=lfs merge=lfs -text
-vgg19_model/ filter=lfs diff=lfs merge=lfs -text
+vgg19_model/weights/ filter=lfs diff=lfs merge=lfs -text
 Vgg16+SVM/ filter=lfs diff=lfs merge=lfs -text
 *.docx filter=lfs diff=lfs merge=lfs -text
 *.pdf filter=lfs diff=lfs merge=lfs -text
