--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@ vgg19_model/weights/ filter=lfs diff=lfs merge=lfs -text
 Vgg16+SVM/ filter=lfs diff=lfs merge=lfs -text
 *.docx filter=lfs diff=lfs merge=lfs -text
 *.pdf filter=lfs diff=lfs merge=lfs -text
+data/ filter=lfs diff=lfs merge=lfs -text
