--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@ Vgg16+SVM/ filter=lfs diff=lfs merge=lfs -text
 *.docx filter=lfs diff=lfs merge=lfs -text
 *.pdf filter=lfs diff=lfs merge=lfs -text
 data/ filter=lfs diff=lfs merge=lfs -text
+/streamlit/src/data/model/Vgg16+SVM/weights/model_Transfer_Learning_segment5/variables filter=lfs diff=lfs merge=lfs -text
