--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,7 @@ Vgg16+SVM/ filter=lfs diff=lfs merge=lfs -text
 *.pdf filter=lfs diff=lfs merge=lfs -text
 data/ filter=lfs diff=lfs merge=lfs -text
 /streamlit/src/data/model/Vgg16+SVM/weights/model_Transfer_Learning_segment5/variables filter=lfs diff=lfs merge=lfs -text
+*.pb filter=lfs diff=lfs merge=lfs -text
+*.data-0000* filter=lfs diff=lfs merge=lfs -text
+*.index* filter=lfs diff=lfs merge=lfs -text
+*.data-00000-of-00001* filter=lfs diff=lfs merge=lfs -text
