--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,32 @@
-boto3>=1.17.73
-cvxopt>=1.2.6
-cvxpy>=1.1.12
-datashader>=0.12.1
-distributed>=2021.5.0
-enum-compat>=0.0.3
-hvplot>=0.7.1
-jupyter>=1.0.0
-keras-nightly>=2.5.0.dev2021032900
-numexpr>=2.7.3
-olefile>=0.46
-opencv-python>=4.5.4.58
-openpyxl>=3.0.9
-pip-chill>=1.0.1
-plotly>=4.14.3
-scikit-image>=0.18.1
-scikit-optimize>=0.9.0
-seaborn>=0.11.1
-sklearn>=0.0
-streamlit>=1.0.0
-tensorboardx>=2.4
-tensorflow>=2.6.0
-tensorflow-addons>=0.13.0
-tune-sklearn>=0.4.1
-umap-learn>=0.5.1
-vit-keras>=0.1.0
-xlrd>=2.0.1
+autopep8==1.6.0
+boto3==1.17.73
+cvxopt==1.2.6
+cvxpy==1.1.12
+datapane==0.14.0
+datashader==0.12.1
+distributed==2021.5.0
+eli5==0.11.0
+enum-compat==0.0.3
+hvplot==0.7.1
+jupyter==1.0.0
+jupyterlab==3.0.15
+kaggle==1.5.12
+keras==2.6.0
+numexpr==2.7.3
+olefile==0.46
+opencv-python==4.5.4.58
+openpyxl==3.0.9
+pip-chill==1.0.1
+plotly==4.14.3
+scikit-image==0.18.1
+scikit-optimize==0.9.0
+seaborn==0.11.1
+sklearn==0.0
+streamlit==1.0.0
+tensorboardx==2.4
+tensorflow==2.6.0
+tensorflow-addons==0.13.0
+tune-sklearn==0.4.1
+umap-learn==0.5.1
+vit-keras==0.1.0
+xlrd==2.0.1
